[tool.poetry]
name = "coda-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.5"}
sqlalchemy = "^2.0.32"
pymysql = "^1.1.1"
aiomysql = "^0.2.0"
boto3 = ">=1.34.70,<1.35.5"
aioboto3 = "^13.1.1"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
